Unit Testing & Proper Weakness